# task-tracker-app

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Networking/: CMakeLists.txt
Networking/include/client/: Application.h  Client.h  UserInterface.h  application.h  client.h  user_interface.h
Networking/include/server/: Connection.h  EventHandler.h  Server.h  UserSession.h  client_authorization.h  client_session.h  connection.h  server.h  task.h  user.h  user_session.h
Networking/src/client/: Application.cpp  Client.cpp  UserInterface.cpp  client.cpp  user_interface.cpp
Networking/src/server/: Connection.cpp  EventHandler.cpp  Server.cpp  UserSession.cpp  client_authorization.cpp  client_session.cpp  connection.cpp  event_handler.cpp  server.cpp  task.cpp  user.cpp  user_session.cpp
Server/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt
networking/: CMakeLists.txt
networking/include/client/: client.h  user_interface.h
networking/include/server/: client_authorization.h  client_session.h  command_handler.h  connection.h  database.h  event_handler.h  message_sender.h  server.h  session.h  session_authorization.h  task.h  task_distributor.h  user.h  user_storage.h
networking/src/client/: application.cpp  client.cpp  user_interface.cpp
networking/src/server/: client_authorization.cpp  client_session.cpp  command_handler.cpp  connection.cpp  database.cpp  event_handler.cpp  message_sender.cpp  server.cpp  session.cpp  session_authorization.cpp  task.cpp  task_distributor.cpp  user.cpp  user_storage.cpp
server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  command_handler_test.cpp
